add .env and ngrok

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,14 @@
+##################
+#     drone      #
+##################
+DRONE_SERVER_HOST=
+DRNOE_SERVER_PROTO=https
+DRONE_RPC_SECRET=
+DRONE_RPC_HOST=
+DRONE_RPC_PROTO=
+
+##################
+#     github     #
+##################
 DRONE_GITHUB_CLIENT_ID=
 DRONE_GITHUB_CLIENT_SECRET=
