--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,15 +10,18 @@ services:
       - ./:/data
     restart: always
     environment:
-      - DRONE_SERVER_HOST=localhost
-      - DRONE_SERVER_PROTO=https
+      - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
+      - DRONE_SERVER_PROTO=${DRONE_SERVER_PROTO}
+      - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
+
       - DRONE_TLS_AUTOCERT=false
-      - DRONE_RPC_SECRET=drone-secret
       - DRONE_AGENTS_ENABLED=true
+
       # GitHub Config
       - DRONE_GITHUB_SERVER=https://github.com
       - DRONE_GITHUB_CLIENT_ID=${DRONE_GITHUB_CLIENT_ID}
       - DRONE_GITHUB_CLIENT_SECRET=${DRONE_GITHUB_CLIENT_SECRET}
+
       - DRONE_LOGS_PRETTY=true
       - DRONE_LOGS_COLOR=true
 
@@ -30,6 +33,7 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DRONE_RPC_SERVER=http://drone-server
-      - DRONE_RPC_SECRET=drone-secret
+      - DRONE_RPC_HOST=http://drone-server
+      - DRONE_RPC_PROTO=${DRONE_RPC_PROTO}
+      - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       - DRONE_RUNNER_CAPACITY=3
