fix drone agent

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,10 @@
 #     drone      #
 ##################
 DRONE_SERVER_HOST=
-DRNOE_SERVER_PROTO=https
-DRONE_RPC_SECRET=
+DRONE_SERVER_PROTO=https
+DRONE_RPC_SECRET=secret
 DRONE_RPC_HOST=
-DRONE_RPC_PROTO=
+DRONE_RPC_PROTO=https
 
 ##################
 #     github     #
