--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,12 @@ version: "2"
 
 services:
   drone-server:
-    image: drone/drone:1
+    image: drone/drone:latest
     ports:
       - 8081:80
       - 443:443
     volumes:
-      - ./:/data
+      - ./data:/data
     restart: always
     environment:
       - DRONE_SERVER_HOST=${DRONE_SERVER_HOST}
@@ -26,14 +26,14 @@ services:
       - DRONE_LOGS_COLOR=true
 
   drone-agent:
-    image: drone/agent:1
+    image: drone/drone-runner-docker:latest
     restart: always
     depends_on:
       - drone-server
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     environment:
-      - DRONE_RPC_HOST=http://drone-server
+      - DRONE_RPC_HOST=drone-server
       - DRONE_RPC_PROTO=${DRONE_RPC_PROTO}
       - DRONE_RPC_SECRET=${DRONE_RPC_SECRET}
       - DRONE_RUNNER_CAPACITY=3
