--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,11 @@
 ##################
 #     drone      #
 ##################
-DRONE_SERVER_HOST=
+DRONE_SERVER_HOST=8e76ad03.ngrok.io
 DRONE_SERVER_PROTO=https
-DRONE_RPC_SECRET=secret
+DRONE_RPC_SECRET=53adf00ef77cd6d135c96b9352cb8465
 DRONE_RPC_HOST=
-DRONE_RPC_PROTO=https
+DRONE_RPC_PROTO=http
 
 ##################
 #     github     #
